# solverlib

./: .gitignore  CMakeLists.txt  genmatrix.hpp  genmatrix.tpp  main.cpp  solverlib.hpp  solverlib.tpp
.github/workflows/: tests.yml
genmatrix/: genmatrix.hpp  genmatrix.tpp
matrix/: matrix.hpp  matrix.tpp
solverlib/: backimplement.tpp  solverlib.hpp  solverlib.tpp
tests/: test_fixture.hpp  test_solver.cpp  test_utils.cpp
